syntax = "proto3";

import "lesson_messages.proto";
import "google/api/annotations.proto";

package ocp.lesson.api;

option go_package = "github.com/ozoncp/ocp-course-api/api/ocp-lesson-api;ocp_lesson_api";

service OcpLessonApi {
    rpc ListLessonsV1(ListLessonsV1Request) returns (ListLessonsV1Response) {
        option (google.api.http) = {
            get: "/v1/lessons"
        };
    }

    rpc DescribeLessonV1(DescribeLessonV1Request) returns (DescribeLessonV1Response) {
        option (google.api.http) = {
            get: "/v1/lessons/{lesson_id}"
        };
    }

    rpc CreateLessonV1(CreateLessonV1Request) returns (CreateLessonV1Response) {
        option (google.api.http) = {
            post: "/v1/lessons"
            body: "lesson"
        };
    }

    rpc RemoveLessonV1(RemoveLessonV1Request) returns (RemoveLessonV1Response) {
        option (google.api.http) = {
            delete: "/v1/lessons/{lesson_id}"
        };
    }
}

